[package]
name = "reflector-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
argfile = "0.1.6"
base64 = "0.21.4"
clap = { version = "4.4.3", features = ["derive"] }
clap_complete = "4.4.1"
dirs = "5.0.1"
lazy_static = "1.4.0"
reqwest = { version = "0.11.20", features = ["json", "brotli", "gzip"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
thiserror = "1.0.48"
tokio = { version = "1.32.0", features = ["full"] }
url = { version = "2.4.1", features = ["serde"] }

[build-dependencies]
lazy_static = "1.4.0"
url = { version = "2.4.1" }
clap = { version = "4.4.3", features = ["derive"] }
clap_complete = "4.4.1"
clap_mangen = "0.2.13"
