[package]
name = "reflector-rs"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
argfile = "0.2.1"
base64 = "0.22.1"
clap = { version = "4.5.31", features = ["derive"] }
clap_complete = "4.5.46"
dirs = "6.0.0"
reqwest = { version = "0.12.12", features = ["json", "brotli", "gzip"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
url = { version = "2.5.4", features = ["serde"] }

[build-dependencies]
clap = { version = "4.5.31", features = ["derive"] }
clap_complete = "4.5.46"
clap_mangen = "0.2.26"
url = "2.5.4"
