[package]
name = "reflector-rs"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
argfile = "1.0.0"
base64 = "0.22.1"
clap = { version = "4.6.1", features = ["derive"] }
clap_complete = "4.6.2"
dirs = "6.0.0"
reqwest = { version = "0.13.2", features = ["json", "brotli", "gzip"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["full"] }
url = { version = "2.5.8", features = ["serde"] }

[build-dependencies]
clap = { version = "4.6.1", features = ["derive"] }
clap_complete = "4.6.2"
clap_mangen = "0.3.0"
url = "2.5.8"
